# P2-P3---IA

./: CMakeLists.txt  Dockerfile  Dockerfile copy  README.md  run.sh  test.sh
Comportamientos_Jugador/: auxiliar.cpp  auxiliar.hpp  rescatador.cpp  rescatador.hpp
